// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Picker Single PickerWrapper should render 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ContentPickerSingle__PickerWrapper-sc-16ndpp2-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";margin-bottom:3px;",
        ],
      },
      "displayName": "ContentPickerSingle__PickerWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ContentPickerSingle__PickerWrapper-sc-16ndpp2-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Content Picker Single PickerWrapper should render with additional styles when open 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ContentPickerSingle__PickerWrapper-sc-16ndpp2-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";margin-bottom:3px;",
        ],
      },
      "displayName": "ContentPickerSingle__PickerWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ContentPickerSingle__PickerWrapper-sc-16ndpp2-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  open={true}
/>
`;

exports[`Content Picker Single should not render when hidden 1`] = `""`;

exports[`Content Picker Single should render 1`] = `
<ContentPickerSingle__PickerWrapper
  data-test="Title-picker-wrapper"
  open={false}
>
  <ContentPickerTitle
    data-test="picker-title"
    disabled={false}
    onClick={[MockFunction]}
    open={false}
    selected={false}
  >
    Title
  </ContentPickerTitle>
  <ContentPickerPanel
    id="Title-panel"
    labelledBy="Title-title"
    open={false}
  >
    <PickerOption
      aria-pressed={true}
      data-test="picker-option"
      key="1"
      onClick={[Function]}
      selected={true}
      type="button"
      variant="primary"
    >
      Option 1
    </PickerOption>
    <PickerOption
      aria-pressed={false}
      data-test="picker-option"
      key="2"
      onClick={[Function]}
      selected={false}
      type="button"
      variant="primary"
    >
      Option Label 2
    </PickerOption>
    <PickerOption
      aria-pressed={false}
      data-test="picker-option"
      key="3"
      onClick={[Function]}
      selected={false}
      type="button"
      variant="primary"
    >
      Untitled Answer
    </PickerOption>
  </ContentPickerPanel>
</ContentPickerSingle__PickerWrapper>
`;
